--- a/css/style.css
+++ b/css/style.css
@@ -246,6 +246,19 @@ table {
     background-size: auto;
     background-repeat: no-repeat, repeat;
     background-position: center;
+    position: relative;
+}
+
+.last-td::after {
+    -webkit-backdrop-filter: blur(1.5px);
+    backdrop-filter: blur(1.5px);
+
+    content: "";
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
 }
 
 
@@ -266,6 +279,8 @@ table {
     color: var(--main-color);
     border: 1px solid #FFFFFF;
     padding: 12px 28px;
+    position: relative;
+    z-index: 1;
 }
 
 .new-product-wrap {
