--- a/css/style.css
+++ b/css/style.css
@@ -39,9 +39,10 @@ li {
 }
 
 .logo {
-    margin-right: 400px;
+    /* margin-right: 400px; */
     font-size: 36px;
     line-height: 54px;
+    justify-content: sp;
     color: var(--main-color);
 }
 
@@ -279,7 +280,7 @@ table {
     border-collapse: separate;
     border-spacing: 23px;
     margin: 0 auto;
-    width: 1109px !important;
+    /* width: 1109px !important; */
     border: none !important;
     border-bottom-style: none !important;
     text-align: center;
@@ -292,7 +293,8 @@ table {
     background-size: auto;
     background-repeat: no-repeat, repeat;
     background-position: center; */
-    position: absolute;
+    position: relative;
+    top: -30px;
     text-align: center;
 }
 
