--- a/css/style.css
+++ b/css/style.css
@@ -558,6 +558,10 @@ table {
     .article-img {
         width: 100%;
     }
+
+    .new-colection-wraper {
+        padding: 200px 0;
+    }
 }
 
 @media only screen and (max-width: 600px) {
@@ -579,6 +583,18 @@ table {
 
     .hero {
         padding-bottom: 50px;
+    }
+
+    .new-seson-item {
+        margin-right: 0;
+    }
+
+    .new-seson-item:last-child {
+        margin-right: 0;
+    }
+
+    .new-products {
+        padding-bottom: 100px;
     }
 }
 
