--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,25 @@ li {
     width: 100px;
 }
 
+.registr-btn,
+.login-btn {
+    background-color: transparent;
+    color: var(--second);
+    padding: 0;
+    margin: 0;
+    border: none;
+}
+
+.modal-content {
+    padding: 30px 50px;
+    border-radius: 50px;
+    background-color: var(--main-bg);
+}
+
+body.modal-open {
+    overflow: hidden;
+}
+
 .icon {
     color: var(--main-color);
     font-size: 22px;
